--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -10,6 +10,10 @@
 
   }
 
+  html.sr .load-hidden {
+    visibility: hidden;
+}
+
   // #colcol{
   // padding-left: 5px;
   // padding-top: 10px;
